feat: add completed version

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <title>Force Directed Graph</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="index.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>
     Force Directed Graph
   </h1>
-  <svg id="container" width="960" height="500"></svg>
+  <svg id="container" width="960" height="960"></svg>
 </body>
 </html>
